# npd_durc_is_crud

./: COMMUNITY.md  POSTGRESQL_SCHEMA_FIX_SUMMARY.md  README.md  README_durc_diagram.md  _merged_.sql  code.json  durc_diagram.py  durc_diagram_graphviz.py  durc_is_crud.code-workspace  example_durc_diagram.md  example_postgresql_schema_output.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_console_foreign_keys.sql  test_durc_mine_fkeys.py  test_foreign_keys.sql  test_graphviz_output.md  test_with_sections.sql
AI_Instructions/: durc_diagram.md  durc_infer_foreign_keys.md
AI_Instructions/durc_postgres_test_files/: _merged_.sql
docs/: installation.md  usage.md
durc_is_crud/cli/: durc_mine_fkeys.py
durc_is_crud/management/commands/: durc_diagram.py  durc_mine_fkeys.py
durc_is_crud/management/commands/durc_utils/: relational_model_extractor.py
durc_is_crud/shared/: durc_data_loader.py
management/commands/: durc_test.py
scripts/: build_and_install.sh  publish.sh
tests/: test_durc_diagram.py  test_durc_diagram_graphviz.py
tests/diagram_output_tests/: README.md  test_block_based_diagram.md  test_durc_database_diagram.md  test_formatted_sections_diagram.md  test_improved_spacing_diagram.md  test_sections_diagram.md  test_with_sections.sql
tests/test_commands/: test_durc_mine.py
