[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38', 'py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
django_find_project = false
DJANGO_SETTINGS_MODULE = "tests.test_settings"

[tool.coverage.run]
source = ["durc_is_crud"]
omit = ["tests/*", "*/migrations/*", "*/settings/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]


[project]
name = "durc-is-crud"
version = "0.0.1"
authors = [
  { name="Fred Trotter", email="fred.trotter@gmail.com" },
]
description = "DURC creates Django CRUD files from the database."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "CC0-1.0"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/ftrotter/durc_is_crud"
Issues = "https://github.com/ftrotter/durc_is_crud/issues"